update label, text for qt-group

--- a/flaskdash/app/templates/dark_layout.html
+++ b/flaskdash/app/templates/dark_layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Twin Tech Labs - CoreUI Flask Admin</title>
+        <title>QT - Trading System</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -107,7 +107,7 @@
         {% endblock %}
         </div>
         <footer class="app-footer">
-          <div>FlaskDash &copy; 2018 Twin Tech Labs</div>
+          <div>TradingSystem &copy; 2020 QTGlobal-Group</div>
           <div class="ml-auto">
             <span>Powered by</span>
             <a href="https://coreui.io">CoreUI</a>
