--- a/flaskdash/app/templates/flask_user/login.html
+++ b/flaskdash/app/templates/flask_user/login.html
@@ -24,7 +24,7 @@
                 {%- endwith %}
             {% endblock %}
               <h1>Login</h1>
-              <p class="text-muted">Sign In to your account</p>
+              <p class="text-muted">Sign In to QT-Trading System</p>
               <div class="input-group mb-3">
                 <input type="email" id="email" class="form-control" name="email" placeholder="Email">
               </div>
