Add trading tab

--- a/flaskdash/app/templates/dark_layout.html
+++ b/flaskdash/app/templates/dark_layout.html
@@ -52,6 +52,11 @@
                       <span class="badge badge-primary">NEW</span>
                     </a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/trading">
+                      <i class="nav-icon icon-chart"></i> Trading
+                    </a>
+                  </li>
                   <li class="nav-item nav-dropdown">
                     <a class="nav-link nav-dropdown-toggle" href="#">
                       <i class="nav-icon icon-bell"></i> My Account</a>
