--- a/flaskdash/app/templates/views/controller1/member_base.html
+++ b/flaskdash/app/templates/views/controller1/member_base.html
@@ -139,6 +139,13 @@
         <div class="chart-wrapper" style="height:370px;margin-top:20px;margin-bottom:20px;">
           <div id="container" ></div>
         </div>
+
+      </div>
+      <div class="row">
+          <!--/.col-->
+          <div class="col-sm-12 d-none d-md-block" style="height:370px;margin-top:20px;margin-bottom:20px;">
+            <iframe src="/sticker#GOOG" style="display: block; width: 100%; height: 100%; border: none;"></iframe>
+          </div>
       </div>
       <div class="card-footer">
         <div class="row text-center">
