--- a/flaskdash/app/templates/views/controller1/member_base.html
+++ b/flaskdash/app/templates/views/controller1/member_base.html
@@ -773,7 +773,7 @@
 
 <script>
 $.getJSON(
-    'https://cdn.rawgit.com/highcharts/highcharts/057b672172ccc6c08fe7dbb27fc17ebca3f5b770/samples/data/usdeur.json',
+    '/quote_data',
     function (data) {
 
         Highcharts.chart('container', {
