--- a/flaskdash/app/templates/views/controller1/dashboard.html
+++ b/flaskdash/app/templates/views/controller1/dashboard.html
@@ -29,7 +29,7 @@
       <div class="card-body">
         <div class="row">
           <div class="col-sm-5">
-            <h4 class="card-title mb-0">Traffic</h4>
+            <h4 class="card-title mb-0">GOOGLE</h4>
             <div class="small text-muted">May 2020</div>
           </div>
           <!--/.col-->
