--- a/flaskdash/app/templates/views/controller1/member_base.html
+++ b/flaskdash/app/templates/views/controller1/member_base.html
@@ -113,8 +113,8 @@
       <div class="card-body">
         <div class="row">
           <div class="col-sm-5">
-            <h4 class="card-title mb-0">Traffic</h4>
-            <div class="small text-muted">November 2017</div>
+            <h4 class="card-title mb-0">GOOG</h4>
+            <div class="small text-muted">2020</div>
           </div>
           <!--/.col-->
           <div class="col-sm-7 d-none d-md-block">
@@ -773,7 +773,7 @@
 
 <script>
 $.getJSON(
-    '/quote_data',
+    '/ts',
     function (data) {
 
         Highcharts.chart('container', {
